# qosic-sdk

./: .gitignore  .pyup.yml  .readthedocs.yaml  .travis.yml  AUTHORS.rst  CLAUDE.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  TODO.md  example.py  pyproject.toml  requirements_dev.txt  requirements_test.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: publish.yml  python-package-test.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  requirements.txt  usage.rst  usage_guide.rst
docs_html/: .buildinfo  authors.html  contributing.html  genindex.html  history.html  index.html  installation.html  objects.inv  readme.html  search.html  searchindex.js  usage.html
docs_html/.doctrees/: authors.doctree  contributing.doctree  environment.pickle  history.doctree  index.doctree  installation.doctree  readme.doctree  usage.doctree
docs_html/_sources/: index.rst.txt  usage.rst.txt
qosic/: __init__.py  api.py  client.py  constants.py  errors.py  exceptions.py  helpers.py  logger.py  models.py  protocols.py  providers.py  qosic.py  utils.py
qosic/mobile_carriers/: utils.py
qosic/mobile_carriers/bj/: __init__.py  moov.py  mtn.py
tests/: __init__.py  test_api.py  test_mobile_carriers.py  test_models.py  test_providers.py  test_qosic.py  test_utils.py
