[tool.poetry]
name = "qosic-sdk"
version = "4.0.3"
description = "An unofficial python sdk for the QosIc platform."
authors = ["Tobi-De <tobidegnon@protonmail.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/Tobi-De/qosic-sdk"
homepage = "https://github.com/Tobi-De/qosic-sdk"
keywords = ["python", "qosic-sdk", "qosic", "qos", "payment", "momo", "mobile money"]
packages = [
    { include = "qosic" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3 :: Only",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.24.0"
polling2 = "^0.5.0"
shibuya = "^2023.3.19"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.2.0"
python-dotenv = "^1.0.0"
coverage = "^7.2.3"
furo = "^2023.3.27"
types-dataclasses = "^0.6.6"
pytest = "^7.3.0"
pytest-httpx = "^0.22.0"
myst-parser = "^1.0.0"
sphinx-watch = "^0.1.2"
poethepoet = "^0.19.0"

[tool.poe.tasks]
docs = "sphinx-watch docs docs/_build html --httpd --port 8080"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    # note the use of single quote below to denote "raw" strings in TOML
    'ignore:function ham\(\) is deprecated:DeprecationWarning',
]
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
