[project]
name = "qosic-sdk"
version = "5.1.0"
description = "An unofficial python sdk for the QosIc platform."
authors = [{name = "Tobi-De", email = "tobidegnon@protonmail.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["python", "qosic-sdk", "qosic", "qos", "payment", "momo", "mobile money"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3 :: Only",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "httpx>=0.27.0",
    "polling2>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/Tobi-De/qosic-sdk"
Repository = "https://github.com/Tobi-De/qosic-sdk"

[dependency-groups]
dev = [
    "black>=24.3.0",
    "mypy>=1.9.0",
    "python-dotenv>=1.0.1",
    "coverage>=7.4.4",
    "furo>=2024.1.29",
    "types-dataclasses>=0.6.6",
    "pytest>=8.1.1",
    "pytest-httpx>=0.30.0",
    "myst-parser>=2.0.0",
    "sphinx-watch>=0.1.2",
    "sphinx>=7.0.0",
    "flake8>=7.0.0",
    "shibuya>=2024.3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["qosic"]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    # note the use of single quote below to denote "raw" strings in TOML
    'ignore:function ham\(\) is deprecated:DeprecationWarning',
]

[tool.flake8]
exclude = ["docs"]
